[gd_scene load_steps=6 format=2]

[ext_resource path="res://DataTaboo/DebugSprites/TestCapsule.png" type="Texture" id=1]
[ext_resource path="res://DataTaboo/KinematicObjects2D/Projectile2D/Projectile2D.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 8.00001

[sub_resource type="CapsuleShape2D" id=4]
radius = 19.0
height = 30.0

[node name="Projectile2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
velocity = Vector2( 100, 0 )
max_velocity = Vector2( 100, 0 )
distance_stop_buffer = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="FlightTime" type="Timer" parent="."]
one_shot = true

[connection signal="collided" from="." to="." method="_on_Projectile2D_collided"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Projectile2D_virtual_collided"]
[connection signal="timeout" from="FlightTime" to="." method="_on_FlightTime_timeout"]
